[gd_scene load_steps=2 format=3 uid="uid://bkq3d5427aexv"]

[ext_resource type="Script" path="res://scripts/gameplay/player.gd" id="1"]

[node name="player" type="Node2D"]
script = ExtResource("1")

[node name="spawn_pos" type="Marker2D" parent="."]

[node name="auto_drop_timer" type="Timer" parent="."]

[node name="down_delay" type="Timer" parent="."]
one_shot = true

[node name="lock_delay" type="Timer" parent="."]

[node name="horizontal_timer" type="Timer" parent="."]
wait_time = 0.5
